--- a/index.html
+++ b/index.html
@@ -1,74 +1,79 @@
 <!DOCTYPE html>
-</section>
 
 
-<!-- O nama -->
-<section class="py-16">
-<div class="max-w-5xl mx-auto px-6 text-center">
-<h2 class="text-3xl font-semibold mb-6">Zašto SmartLunch?</h2>
-<p class="max-w-3xl mx-auto">Naš cilj je da studentima i zaposlenima obezbedimo kvalitetne obroke po pristupačnim cenama, uz brzo naručivanje i jednostavno preuzimanje.</p>
-<div class="grid md:grid-cols-3 gap-8 mt-10">
-<div class="bg-white p-6 rounded-2xl shadow">
-<h3 class="font-semibold mb-2">Niska cena</h3>
-<p>Obroci prilagođeni studentskom budžetu.</p>
+<section id="meni" class="section" style="background:#ffffff;">
+<div class="container">
+<h2 class="section-title">Primer menija</h2>
+<div class="menu-grid">
+<div class="menu-item">
+<h3>Pileći fit obrok</h3>
+<p>Piletina sa roštilja, integralni pirinač, sezonska salata</p>
+<div class="price">450 RSD</div>
 </div>
-<div class="bg-white p-6 rounded-2xl shadow">
-<h3 class="font-semibold mb-2">Brza usluga</h3>
-<p>Online poručivanje i brzo preuzimanje.</p>
+<div class="menu-item">
+<h3>Vegetarijanski tanjir</h3>
+<p>Grilovano povrće, testenina, sos od jogurta</p>
+<div class="price">400 RSD</div>
 </div>
-<div class="bg-white p-6 rounded-2xl shadow">
-<h3 class="font-semibold mb-2">Zdrava hrana</h3>
-<p>Balansirani obroci sa svežim sastojcima.</p>
+<div class="menu-item">
+<h3>Goveđi power obrok</h3>
+<p>Govedina, krompir iz rerne, mešana salata</p>
+<div class="price">500 RSD</div>
 </div>
-</div>
-</div>
-</section>
-
-
-<!-- Meni -->
-<section id="meni" class="bg-white py-16">
-<div class="max-w-5xl mx-auto px-6">
-<h2 class="text-3xl font-semibold mb-10 text-center">Primer menija</h2>
-<div class="grid md:grid-cols-3 gap-8">
-<div class="border rounded-xl p-4">
-<h3 class="font-semibold">Pileći obrok</h3>
-<p class="text-sm">Piletina, pirinač, salata</p>
-<p class="mt-2 font-bold">450 RSD</p>
-</div>
-<div class="border rounded-xl p-4">
-<h3 class="font-semibold">Vegetarijanski obrok</h3>
-<p class="text-sm">Povrće, testenina</p>
-<p class="mt-2 font-bold">400 RSD</p>
-</div>
-<div class="border rounded-xl p-4">
-<h3 class="font-semibold">Goveđi obrok</h3>
-<p class="text-sm">Govedina, krompir</p>
-<p class="mt-2 font-bold">500 RSD</p>
+<div class="menu-item">
+<h3>Studentski meni</h3>
+<p>Dnevni obrok po promotivnoj ceni</p>
+<div class="price">350 RSD</div>
 </div>
 </div>
 </div>
 </section>
 
 
-<!-- Kontakt -->
-<section id="kontakt" class="py-16">
-<div class="max-w-xl mx-auto px-6">
-<h2 class="text-3xl font-semibold mb-6 text-center">Kontakt</h2>
-<form class="bg-white p-6 rounded-2xl shadow space-y-4">
-<input type="text" placeholder="Ime" class="w-full border p-2 rounded" />
-<input type="email" placeholder="Email" class="w-full border p-2 rounded" />
-<textarea placeholder="Poruka" class="w-full border p-2 rounded"></textarea>
-<button class="w-full bg-green-600 text-white py-2 rounded hover:bg-green-700">Pošalji</button>
+<section id="kako" class="section">
+<div class="container">
+<h2 class="section-title">Kako funkcioniše?</h2>
+<div class="how-steps">
+<div class="step">
+<h3>1. Izaberi obrok</h3>
+<p>Pregledaj meni i izaberi obrok koji ti najviše odgovara.</p>
+</div>
+<div class="step">
+<h3>2. Poruči online</h3>
+<p>Jednostavna forma za naručivanje u nekoliko klikova.</p>
+</div>
+<div class="step">
+<h3>3. Preuzmi ili dostava</h3>
+<p>Preuzmi u najbližem punktu ili sačekaj dostavu.</p>
+</div>
+</div>
+</div>
+</section>
+
+
+<section id="kontakt" class="section" style="background:#ffffff;">
+<div class="container">
+<h2 class="section-title">Kontakt</h2>
+<form class="contact-form">
+<input type="text" placeholder="Ime i prezime" />
+<input type="email" placeholder="Email adresa" />
+<textarea rows="4" placeholder="Vaša poruka"></textarea>
+<button type="submit" class="btn btn-primary" style="width:100%;">Pošalji poruku</button>
 </form>
 </div>
 </section>
 
 
-<!-- Footer -->
-<footer class="bg-gray-900 text-gray-300 py-6">
-<div class="max-w-6xl mx-auto px-6 flex justify-between">
-<p>© 2026 SmartLunch</p>
-<p>Email: info@smartlunch.rs</p>
+<footer>
+<div class="container footer-grid">
+<div>
+<strong>SmartLunch</strong><br />
+Studentski projekat – 2026
+</div>
+<div>
+Kontakt: info@smartlunch.rs<br />
+Telefon: +381 60 123 456
+</div>
 </div>
 </footer>
 
